Update HMM - Ali.ipynb
Added some documentation for Process function

--- a/HMM - Ali.ipynb
+++ b/HMM - Ali.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 143,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -16,39 +16,65 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "pycharm": {
+     "is_executing": false,
+     "name": "#%% md\n"
+    }
+   },
+   "source": [
+    "We don't filter NA values because there is type of tag in the data called \"NA\". We need this to register as a string."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 144,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   },
    "outputs": [],
    "source": [
     "train = pd.read_csv(\"AfrikaansPOSData/train.csv\",na_filter=False)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
-   "outputs": [],
+   "execution_count": 145,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false,
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "2613"
+     },
+     "metadata": {},
+     "output_type": "execute_result",
+     "execution_count": 145
+    }
+   ],
    "source": [
     "# train['Token'].isna().sum() \n",
-    "NAs = len(train.loc[train['Token'] == \"NA\"]) # number of NA vals"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
-    }
-   }
+    "NAs = len(train.loc[train['Token'] == \"NA\"]) # number of NA vals\n",
+    "NAs"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 146,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false,
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -56,149 +82,125 @@
      },
      "metadata": {},
      "output_type": "execute_result",
-     "execution_count": 97
+     "execution_count": 146
     }
    ],
    "source": [
     "train.iloc[175,1]"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "True"
-     },
-     "metadata": {},
-     "output_type": "execute_result",
-     "execution_count": 28
-    }
-   ],
-   "source": [
-    "np.isnan(train.iloc[27,0])"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "The process function mostly works but one will issue that cropped up is that it's labelling \"NA\" tags as NaNs.\n",
-    "Solved this issue by not filtering NAs out at read-in. "
-   ],
    "metadata": {
-    "collapsed": false,
     "pycharm": {
-     "name": "#%% md\n",
-     "is_executing": false
+     "is_executing": false,
+     "name": "#%% md\n"
     }
-   }
+   },
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 147,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false,
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def process(df):\n",
-    "    df2 = pd.DataFrame(columns = [\"Sentences\", \"Tags\"]) #the processed df\n",
-    "    index = 0\n",
+    "    \"\"\"\n",
+    "    The process function takes in a df with a single word and tag in each row and returns a df with a single sentence (and its tags) contained in each row.\n",
+    "    :param df: Dataframe to be processed\n",
+    "    :return: Processed dataframe\n",
+    "    \"\"\"\n",
+    "    df2 = pd.DataFrame(columns = [\"Sentences\", \"Tags\"]) # the processed df\n",
+    "    index = 0 # index counter\n",
     "    for i in range(NAs): \n",
     "        sentence = [] # Stores a single sentence\n",
     "        tags = [] # Stores corresponding tags\n",
-    "        while df.iloc[index,0]!=\"NA\" :\n",
-    "            sentence.append(df.iloc[index,0])\n",
-    "            tags.append(df.iloc[index,1])\n",
+    "        while df.iloc[index,0]!=\"NA\" : # while token is not NA\n",
+    "            sentence.append(df.iloc[index,0]) # append token to sentence\n",
+    "            tags.append(df.iloc[index,1]) # append tag to tags\n",
     "            index+=1\n",
     "            # print(index)\n",
-    "        index+=1\n",
+    "        index+=1 # increment again so next iteration runs\n",
     "        # print(index)\n",
     "        # print(sentence)\n",
     "        # print(tags)\n",
-    "        df2.at[i,'Sentences']=sentence\n",
-    "        df2.at[i,'Tags']=tags\n",
-    "    return df2\n",
-    "        "
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
-    }
-   }
+    "        df2.at[i,'Sentences']=sentence # add sentence to new dataframe\n",
+    "        df2.at[i,'Tags']=tags # add tags for sentence to new dataframe\n",
+    "    return df2"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 148,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false,
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "train2 = process(train)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 149,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false,
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "                                           Sentences  \\\n0  [Die, doel, van, die, webtuiste, vir, Suid-Afr...   \n1  [Die, oogmerk, is, om, die, dispariteit, te, v...   \n2  [Die, webtuiste, is, 'n, kritiese, ingryp, wat...   \n3  [Die, bedoelde, gebruikers, van, die, webtuist...   \n4  ['n, Kritiese, sektor, van, gebruikers, is, al...   \n5  [Omvang, van, die, inligting, op, die, webtuiste]   \n6                 [Inligting, oor, regeringsdienste]   \n7  [Die, webtuiste, bevat, inligting, oor, regeri...   \n8  [Dienste-inligting, is, ooreenkomstig, drie, t...   \n9  [Dienste, vir, mense, :, dienste, vir, Suid-Af...   \n\n                                                Tags  \n0  [LB, NSE, SVS, LB, NSE, SVS, ASA, NSM, VTHOK, ...  \n1  [LB, NSE, VTHOK, SVS, LB, NSE, UPI, VTHOG, PB,...  \n2  [LB, NSE, VTHOK, LO, ASA, NSE, PB, PB, VVHOO, ...  \n3  [LB, ASA, NSM, SVS, LB, NSE, VTHOK, ASA, NSM, ...  \n4  [LO, ASA, NSE, SVS, NSM, VTHOK, THAO, LB, NSM,...  \n5                    [NA, SVS, LB, NM, SVS, LB, NSE]  \n6                                     [NM, SVS, NSM]  \n7  [LB, NSE, VTHOG, NM, SVS, NSM, PB, SVS, LB, AS...  \n8  [NM, VVUOP, SVS, THAB, NSM, NSM, SVS, NSM, VVH...  \n9  [NSM, SVS, NSM, ZM, NSM, SVS, ASA, NSM, PB, SV...  ",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Sentences</th>\n      <th>Tags</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>[Die, doel, van, die, webtuiste, vir, Suid-Afr...</td>\n      <td>[LB, NSE, SVS, LB, NSE, SVS, ASA, NSM, VTHOK, ...</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>[Die, oogmerk, is, om, die, dispariteit, te, v...</td>\n      <td>[LB, NSE, VTHOK, SVS, LB, NSE, UPI, VTHOG, PB,...</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>[Die, webtuiste, is, 'n, kritiese, ingryp, wat...</td>\n      <td>[LB, NSE, VTHOK, LO, ASA, NSE, PB, PB, VVHOO, ...</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>[Die, bedoelde, gebruikers, van, die, webtuist...</td>\n      <td>[LB, ASA, NSM, SVS, LB, NSE, VTHOK, ASA, NSM, ...</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>['n, Kritiese, sektor, van, gebruikers, is, al...</td>\n      <td>[LO, ASA, NSE, SVS, NSM, VTHOK, THAO, LB, NSM,...</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>[Omvang, van, die, inligting, op, die, webtuiste]</td>\n      <td>[NA, SVS, LB, NM, SVS, LB, NSE]</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>[Inligting, oor, regeringsdienste]</td>\n      <td>[NM, SVS, NSM]</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>[Die, webtuiste, bevat, inligting, oor, regeri...</td>\n      <td>[LB, NSE, VTHOG, NM, SVS, NSM, PB, SVS, LB, AS...</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>[Dienste-inligting, is, ooreenkomstig, drie, t...</td>\n      <td>[NM, VVUOP, SVS, THAB, NSM, NSM, SVS, NSM, VVH...</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>[Dienste, vir, mense, :, dienste, vir, Suid-Af...</td>\n      <td>[NSM, SVS, NSM, ZM, NSM, SVS, ASA, NSM, PB, SV...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "['Die',\n 'oogmerk',\n 'is',\n 'om',\n 'die',\n 'dispariteit',\n 'te',\n 'verminder',\n 'wat',\n 'tussen',\n 'die',\n 'bemagtigdes',\n 'en',\n 'die',\n 'ontmagtigdes',\n ',',\n 'oftewel',\n 'die',\n 'eerste',\n 'en',\n 'tweede',\n 'ekonomieë',\n ',',\n 'bestaan',\n '.']"
      },
      "metadata": {},
      "output_type": "execute_result",
-     "execution_count": 110
+     "execution_count": 149
     }
    ],
    "source": [
-    "train2.head(10)"
-   ],
+    "train2.iloc[1,0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
    "metadata": {
-    "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
      "is_executing": false
     }
-   }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "name": "python3",
+   "display_name": "Python 3",
    "language": "python",
-   "display_name": "Python 3"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.7"
   },
   "pycharm": {
    "stem_cell": {
@@ -211,5 +213,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
