Update HMM - Ali.ipynb

--- a/HMM - Ali.ipynb
+++ b/HMM - Ali.ipynb
@@ -24,6 +24,8 @@
     }
    },
    "source": [
+    "# Data Processing\n",
+    "\n",
     "We don't filter NA values because there is type of tag in the data called \"NA\". We need this to register as a string."
    ]
   },
