Update HMM - Ali.ipynb

--- a/HMM - Ali.ipynb
+++ b/HMM - Ali.ipynb
@@ -121,17 +121,13 @@
     "    df2 = pd.DataFrame(columns = [\"Sentences\", \"Tags\"]) # the processed df\n",
     "    index = 0 # index counter\n",
     "    for i in range(NAs): \n",
-    "        sentence = [] # Stores a single sentence\n",
-    "        tags = [] # Stores corresponding tags\n",
+    "        sentence = [] # stores a single sentence\n",
+    "        tags = [] # stores corresponding tags\n",
     "        while df.iloc[index,0]!=\"NA\" : # while token is not NA\n",
     "            sentence.append(df.iloc[index,0]) # append token to sentence\n",
     "            tags.append(df.iloc[index,1]) # append tag to tags\n",
-    "            index+=1\n",
-    "            # print(index)\n",
-    "        index+=1 # increment again so next iteration runs\n",
-    "        # print(index)\n",
-    "        # print(sentence)\n",
-    "        # print(tags)\n",
+    "            index+=1 # increment index\n",
+    "        index+=1 # increment again so next while-loop can run\n",
     "        df2.at[i,'Sentences']=sentence # add sentence to new dataframe\n",
     "        df2.at[i,'Tags']=tags # add tags for sentence to new dataframe\n",
     "    return df2"
@@ -153,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 153,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -163,15 +159,15 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "['Die',\n 'oogmerk',\n 'is',\n 'om',\n 'die',\n 'dispariteit',\n 'te',\n 'verminder',\n 'wat',\n 'tussen',\n 'die',\n 'bemagtigdes',\n 'en',\n 'die',\n 'ontmagtigdes',\n ',',\n 'oftewel',\n 'die',\n 'eerste',\n 'en',\n 'tweede',\n 'ekonomieë',\n ',',\n 'bestaan',\n '.']"
+      "text/plain": "['Die',\n 'doel',\n 'van',\n 'die',\n 'webtuiste',\n 'vir',\n 'Suid-Afrikaanse',\n 'Regeringsdienste',\n 'is',\n 'om',\n \"'n\",\n 'enkele',\n 'bron',\n 'van',\n 'inligting',\n 'te',\n 'bied',\n 'oor',\n 'dienste',\n 'wat',\n 'deur',\n 'die',\n 'Suid-Afrikaanse',\n 'regering',\n 'verskaf',\n 'word',\n '.']"
      },
      "metadata": {},
      "output_type": "execute_result",
-     "execution_count": 149
+     "execution_count": 153
     }
    ],
    "source": [
-    "train2.iloc[1,0]"
+    "train2.Sentences[0]"
    ]
   },
   {
