Update HMM - Ali.ipynb

--- a/HMM - Ali.ipynb
+++ b/HMM - Ali.ipynb
@@ -65,7 +65,7 @@
    "source": [
     "# train['Token'].isna().sum() \n",
     "NAs = len(train.loc[train['Token'] == \"NA\"]) # number of NA vals\n",
-    "NAs"
+    "NAs # number of sentences"
    ]
   },
   {
