--- a/HMM - Ali.ipynb
+++ b/HMM - Ali.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 3,
    "metadata": {
     "pycharm": {
      "name": "#%%\n",
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 4,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -59,7 +59,7 @@
      },
      "metadata": {},
      "output_type": "execute_result",
-     "execution_count": 145
+     "execution_count": 4
     }
    ],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 5,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -84,7 +84,7 @@
      },
      "metadata": {},
      "output_type": "execute_result",
-     "execution_count": 146
+     "execution_count": 5
     }
    ],
    "source": [
@@ -119,7 +119,7 @@
     "    :return: Processed dataframe\n",
     "    \"\"\"\n",
     "    df2 = pd.DataFrame(columns = [\"Sentences\", \"Tags\"]) # the processed df\n",
-    "    index = 0 # index counter\n",
+    "    index = 0 # row index counter\n",
     "    for i in range(NAs): \n",
     "        sentence = [] # stores a single sentence\n",
     "        tags = [] # stores corresponding tags\n",
